# irc-topic-notify

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  config.example.py  docker-compose.yml  irc-topic-notify.service  irc_topic_notify.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-publish.yml  test.yml
docs/plans/: 2026-01-14-github-metadata-design.md
irc_topic_notify.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_bot.py  test_config.py  test_notification.py  test_trigger.py
