[project]
name = "irc-topic-notify"
version = "1.0.0"
description = "Monitor IRC channel topics and get push notifications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "ggfevans" }
]
keywords = ["irc", "notifications", "pushover", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat :: Internet Relay Chat",
]
dependencies = [
    "irc>=20.0.0",
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/ggfevans/irc-topic-notify"
Repository = "https://github.com/ggfevans/irc-topic-notify"
Issues = "https://github.com/ggfevans/irc-topic-notify/issues"

[project.scripts]
irc-topic-notify = "irc_topic_notify:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["irc_topic_notify"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["irc_topic_notify"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
